add_executable(std_thread std_thread.cpp)
add_executable(threadWithoutJoin threadWithoutJoin.cpp)
add_executable(threadWithJoin threadWithJoin.cpp)
add_executable(threadArguments threadArguments.cpp)
add_executable(threadArgumentsFixed threadArgumentsFixed.cpp)
add_executable(threadMethods threadMethods.cpp)
add_executable(jthread jthread.cpp)
add_executable(InterruptJThread InterruptJThread.cpp)
add_executable(CoutUnsynchronized CoutUnsynchronized.cpp)
add_executable(CoutSynchronized CoutSynchronized.cpp)
add_executable(Deadlock Deadlock.cpp)
add_executable(ReaderWriterLock ReaderWriterLock.cpp)
