add_executable(std_thread std_thread.cpp)
add_executable(threadWithoutJoin threadWithoutJoin.cpp)
add_executable(threadWithJoin threadWithJoin.cpp)
add_executable(threadArguments threadArguments.cpp)
add_executable(threadArgumentsFixed threadArgumentsFixed.cpp)
add_executable(threadMethods threadMethods.cpp)
add_executable(jthread jthread.cpp)
add_executable(InterruptJThread InterruptJThread.cpp)
add_executable(CoutUnsynchronized CoutUnsynchronized.cpp)
add_executable(CoutSynchronized CoutSynchronized.cpp)
add_executable(Deadlock Deadlock.cpp)
add_executable(ReaderWriterLock ReaderWriterLock.cpp)
add_executable(DeadlockResolved DeadlockResolved.cpp)
add_executable(DeadlockResolvedScopedLock DeadlockResolvedScopedLock.cpp)
add_executable(CallOnce CallOnce.cpp)
add_executable(SingletonCallOnce SingletonCallOnce.cpp)
add_executable(SingletonStatic SingletonStatic.cpp)
add_executable(ThreadLocal ThreadLocal.cpp)
add_executable(ConditionVariable ConditionVariable.cpp)

add_executable(InvokeCallback InvokeCallback.cpp)
add_executable(SignalStopRequests SignalStopRequests.cpp)
