add_executable(std_thread std_thread.cpp)
add_executable(threadWithoutJoin threadWithoutJoin.cpp)
add_executable(threadWithJoin threadWithJoin.cpp)
add_executable(threadArguments threadArguments.cpp)
add_executable(threadArgumentsFixed threadArgumentsFixed.cpp)
add_executable(threadMethods threadMethods.cpp)
add_executable(jthread jthread.cpp)
add_executable(InterruptJThread InterruptJThread.cpp)
add_executable(CoutUnsynchronized CoutUnsynchronized.cpp)
add_executable(CoutSynchronized CoutSynchronized.cpp)
add_executable(Deadlock Deadlock.cpp)
add_executable(ReaderWriterLock ReaderWriterLock.cpp)
add_executable(DeadlockResolved DeadlockResolved.cpp)
add_executable(DeadlockResolvedScopedLock DeadlockResolvedScopedLock.cpp)
add_executable(CallOnce CallOnce.cpp)
add_executable(SingletonCallOnce SingletonCallOnce.cpp)
add_executable(SingletonStatic SingletonStatic.cpp)
add_executable(ThreadLocal ThreadLocal.cpp)
add_executable(ConditionVariable ConditionVariable.cpp)

add_executable(InvokeCallback InvokeCallback.cpp)
add_executable(SignalStopRequests SignalStopRequests.cpp)

add_executable(ThreadSynchronizationSemaphore
  ThreadSynchronizationSemaphore.cpp)

add_executable(BossWorker BossWorker.cpp)
add_executable(Workers Workers.cpp)
add_executable(FulltimeParttimeWorkers FulltimeParttimeWorkers.cpp)

add_executable(AsyncLazy AsyncLazy.cpp)
add_executable(FireAndForgetFutures FireAndForgetFutures.cpp)
add_executable(DotProductsAsync DotProductsAsync.cpp)

add_executable(PackagedTask PackagedTask.cpp)
add_executable(PackagedTaskReuse PackagedTaskReuse.cpp)
add_executable(PromiseFuture PromiseFuture.cpp)
