add_executable(CopiedValueDataRace CopiedValueDataRace.cpp)
add_executable(PerConstReference PerConstReference.cpp)
add_executable(CopiedLifetimeIssues CopiedLifetimeIssues.cpp)

add_executable(Strategy Strategy.cpp)
add_executable(StrategizedLockingRuntime StrategizedLockingRuntime.cpp)
add_executable(StrategizedLockingCompileTime StrategizedLockingCompileTime.cpp)
