add_executable(CalculateWithLoop CalculateWithLoop.cpp)
add_executable(CalculateWithAccumulate CalculateWithAccumulate.cpp)
add_executable(CalculateWithLock CalculateWithLock.cpp)
add_executable(CalculateWithAtomic CalculateWithAtomic.cpp)

add_executable(LocalVariable LocalVariable.cpp)
add_executable(LocalVariableAtomic LocalVariableAtomic.cpp)
add_executable(LocalVariableAtomicRelaxed LocalVariableAtomicRelaxed.cpp)
add_executable(TaskSummation TaskSummation.cpp)
